tests/specs/ecosystem/htmllover/html_router/0_0_5.test
htmllover/html-router/0.0.5
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export class RouteLink extends HTMLElement {
                               ~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-link.ts:2:32

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export class RouteManager<RouteConfigType extends RouteConfig = RouteConfig> extends HTMLElement {
                                                                                     ~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-maneger.ts:22:86

TS2304 [ERROR]: Cannot find name 'HTMLTemplateElement'.
  set routeTemplate(template: HTMLTemplateElement | null) {}
                              ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-maneger.ts:115:31

TS2304 [ERROR]: Cannot find name 'HTMLTemplateElement'.
  get routeTemplate(): HTMLTemplateElement {
                       ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-maneger.ts:116:24

TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
  get outletElement(): HTMLDivElement {
                       ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-maneger.ts:119:24

TS2304 [ERROR]: Cannot find name 'DocumentFragment'.
  get clone(): DocumentFragment {
               ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/components/route-maneger.ts:122:16

TS2304 [ERROR]: Cannot find name 'DocumentFragment'.
  readonly templateContent: DocumentFragment;
                            ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/types/index.ts:38:29

TS2304 [ERROR]: Cannot find name 'DocumentFragment'.
  readonly clone: DocumentFragment;
                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/types/index.ts:39:19

Found 8 errors.

error: Type checking failed.

